# kawin

./: .gitignore  FastMutex.h  Karmor.cpp  README.md  Rule.cpp  Rule.h  kubearmor.inf  kubearmor.vcxproj  kubearmor.vcxproj.filters
docs/: DESIGN.md  FEATURES.md  PROJECT_LOG.md
driver/: DeviceIOCTL.h  ETW.h  FilenameInformationGuard.h  Filter.cpp  Filter.h  Globals.cpp  Globals.h  Karmor.cpp  KarmorLogs.h  KarmorLogs.man  KarmorLogs.rc  README.md  kubearmor.inf  kubearmor.sln  kubearmor.vcxproj  kubearmor.vcxproj.filters  pch.h
kasvc/: CMakeLists.txt  README.md  config.json
kasvc/include/app/: monitoring_service.h
kasvc/include/app/interfaces/: i_configuration_store.h  i_event_publisher.h  i_event_receiver.h
kasvc/include/comm/: iocp_filter_port_communicator.h  json_config_store.h  kernel_message.h  message_parser.h
kasvc/include/common/: constants.h  logger.h  result.h  thread_safe_queue.h  types.h
kasvc/include/data/: event_processor.h  event_types.h
kasvc/include/rpc/: feeder_event_publisher.h  feeder_service.h
kasvc/protos/: kubearmor.proto
kasvc/src/: main.cpp
kasvc/src/app/: monitoring_service.cpp
kasvc/src/comm/: iocp_filter_port_communicator.cpp  json_config_store.cpp  message_parser.cpp
kasvc/src/data/: event_processor.cpp  event_types.cpp
kasvc/src/rpc/: feeder_event_publisher.cpp  feeder_service.cpp
service/: minifilter-user.cpp  minifilter-user.sln  minifilter-user.vcxproj  minifilter-user.vcxproj.filters
